Present PresentationRequest from being GC'd while getAvailability() is pending.

Bug: 729903
Change-Id: I124db0484fdd3c2122396a7aae25927c9421f1fe
Reviewed-on: https://chromium-review.googlesource.com/525555
Reviewed-by: Tsuyoshi Horo <horo@chromium.org>
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#477589}
Former-commit-id: efb66282aa23c95d6ffc70714ebac01e48f1b07e